.metadata/.plugins/org.eclipse.cdt.ui/freertos_AHT25_1.build.log
17:11:02 **** Incremental Build of configuration Debug for project freertos_AHT25_1 ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'StartTask2':
../Core/Src/main.c:340:1: error: expected declaration or statement at end of input
  340 | }
      | ^
At top level:
../Core/Src/main.c:336:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  336 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:321:6: warning: 'HAL_TIM_PeriodElapsedCallback' defined but not used [-Wunused-function]
  321 | void HAL_TIM_PeriodElapsedCallback(TIM_HandleTypeDef *htim)
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

17:11:03 Build Failed. 2 errors, 2 warnings. (took 555ms)

